# eventfd-rust

./: Cargo.toml
src/: lib.rs
