[package]

name = "eventfd"
version = "0.1.1"
authors = ["Jeremy Fitzhardinge <jeremy@goop.org>"]
description = "Binding to Linux's eventfd syscall"
repository = "https://github.com/jsgf/eventfd-rust.git"
readme = "README.md"
license = "MIT"

[dependencies.nix]
git = "https://github.com/domsj/nix"
rev = "2fb6ef34e6ed5a96a77dd9b7cfee57f2dc129321"
features = [ "eventfd" ]
